Fixed overflow in the x-direction. The PlatformCategory element in the MoreInfoSection had element with with property set to a fixed value causing the element to overflow x. Also, the button element had its width set to a fixed value, such that after it was breaking out its box. By setting both withd attributes to full, the problem was resolved. Finally, I moved the Feature card into a container and set the max width of that container so the cards do no span the full width of the page

--- a/src/index.css
+++ b/src/index.css
@@ -68,3 +68,7 @@ button:focus-visible {
 } */
 
 @import "tailwindcss";
+
+*, ::before, ::after {
+  box-sizing: border-box;
+}
